pulling from main

--- a/firstapp/templates/firstapp/homepageAdmin.html
+++ b/firstapp/templates/firstapp/homepageAdmin.html
@@ -13,7 +13,7 @@
       </a>
 
       <div class="nav col-12 col-lg-auto me-lg-auto justify-content-center ">
-        <h1><b> Homepage </b></h1>
+        <h3><b> Admin Homepage </b></h3>
       </div>
       <a class="nav-link text-white" href="{% url 'AdminResControl' %}">Manage Reservations</a>
       <a class="nav-link text-white" href="{% url 'Übersicht' %}">Homepage</a>
