--- a/firstapp/templates/firstapp/AdminResControl.html
+++ b/firstapp/templates/firstapp/AdminResControl.html
@@ -13,7 +13,7 @@
             </a>
 
             <div class="nav col-12 col-lg-auto me-lg-auto justify-content-center ">
-                <h1><b> Homepage </b></h1>
+                <h3><b> Control Board </b></h3>
             </div>
 
             <a class="nav-link text-white" href="{% url 'AdminResControl' %}">Manage Reservations</a>
